new vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "wsgi.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "handle": "filesystem" },
-      { "src": "/api", "dest": "wsgi.py" },
-      { "src": "/(.*)", "dest": "wsgi.py" }
-    ]
-  }  
+  "version": 2,
+  "builds": [
+    {
+      "src": "wsgi.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/wsgi.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/wsgi.py"
+    }
+  ]
+}
